package task_2.flowers.dried;

import task_2.flowers.Flower;

public class DriedFlower extends Flower {
    public DriedFlower() {
        freshness = 0;
    }
}
