@startuml

package flowers #DDDDDD {
    abstract class Flower {
        # String color
        # int freshness
        # double stemLength
        # int price
        == Methods ==
        + String getColor()
        + int getFreshness()
        + double getStemLength()
        + int getPrice()
        + boolean isInStemRange()
        --
        + boolean equals()
        + int hashCode()
        + String toString()
    }
}

package flowers.dried #DDDDDD {
    class DriedFlower

    class Echinops {
        - boolean isTerry
        - boolean isBarbed
        == Methods ==
        + boolean isTerry()
        + boolean isBarbed()
        --
        + boolean equals()
        + int hashCode()
        + String toString()
    }

    class Gypsophila {
        - boolean isTerry
        == Methods ==
        + boolean isTerry()
        --
        + boolean equals()
        + int hashCode()
        + String toString()
    }
}

package flowers.bush #DDDDDD {
    class BushFlower {
        # boolean hasFetus
        # boolean isFrostResistant
        == Methods ==
        + boolean equals()
        + int hashCode()
        + String toString()
    }

    class Lilac {
        - boolean hasEdging
        - String edgingColor
        == Methods ==
        + boolean hasEdging()
        + String getEdgingColor()
        + void setEdgingColor()
        + void setFreshness()
        --
        + boolean equals()
        + int hasEdging()
        + String toString()
    }

    class Rose {
        - boolean hasSpikes
        == Methods ==
        + boolean hasSpikes()
        + void setFreshness()
        --
        + boolean equals()
        + int hashCode()
        + String toString()
    }
}

package flowers.meadow #DDDDDD {
}

package flowers.bulbous #DDDDDD {
}

Flower <|-- DriedFlower
Flower <|-- BushFlower

DriedFlower <|-- Echinops
DriedFlower <|-- Gypsophila

BushFlower <|-- Lilac
BushFlower <|-- Rose


package accessories #DDDDDD {
}

@enduml